修改base64为apache codec. 修改des和aes的密钥长度